--- a/01-elasticsearch/Dockerfile
+++ b/01-elasticsearch/Dockerfile
@@ -21,7 +21,7 @@ RUN update-locale LANG=en_US.UTF-8
 RUN apt-get install -y sudo python-software-properties openjdk-7-jre-headless
 
 # Install elasticsearch
-ADD https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-0.90.7.deb /tmp
+ADD https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-0.90.7.deb /tmp/
 RUN dpkg -i /tmp/elasticsearch-0.90.7.deb
 RUN rm /tmp/elasticsearch-0.90.7.deb
 
