Fix elasticsearch entrypoint

--- a/01-elasticsearch/Dockerfile
+++ b/01-elasticsearch/Dockerfile
@@ -27,4 +27,4 @@ RUN rm /tmp/elasticsearch-0.90.7.deb
 
 # Setup elasticsearch
 EXPOSE 9200
-ENTRYPOINT [/usr/share/elasticsearch/bin/elasticsearch]
+ENTRYPOINT [/usr/share/elasticsearch/bin/elasticsearch -f]
