Create mongodb data directory

--- a/mongodb/Dockerfile
+++ b/mongodb/Dockerfile
@@ -25,5 +25,8 @@ RUN apt-get update -y
 # Install MongoDB server
 RUN apt-get install -y mongodb-10gen
 
+# Create data dir
+RUN mkdir -p /data/db
+
 # Setup MongoDB server
 EXPOSE 27017
