Tweak elasticsearch image

--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -28,5 +28,5 @@ RUN rm /tmp/elasticsearch-0.90.7.deb
 # Setup elasticsearch
 EXPOSE 9200
 
-# TODO: Find a better way to start ES
-#ENTRYPOINT [/usr/share/elasticsearch/bin/elasticsearch -f]
+# Start elasticsearch, make sure to run container in the background
+CMD [/usr/share/elasticsearch/bin/elasticsearch -f]
