Install precompiled go 1.2

--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -5,7 +5,6 @@ MAINTAINER Dan Sosedoff "dan.sosedoff@gmail.com"
 ENV PATH $PATH:/usr/local/go/bin
 ENV GOPATH /usr/local/go/
 
-# Install Go tools
-RUN wget --no-verbose https://go.googlecode.com/files/go1.2.src.tar.gz
-RUN tar -v -C /usr/local -xzf go1.2.src.tar.gz
-RUN cd /usr/local/go/src && ./make.bash --no-clean 2>&1
+# Install prebuilt Go tools
+ADD https://go.googlecode.com/files/go1.2.linux-amd64.tar.gz /tmp/
+RUN tar -C /usr/local -xzf go1.2.linux-amd64.tar.gz
