--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -7,4 +7,5 @@ ENV GOPATH /usr/local/go/
 
 # Install prebuilt Go tools
 ADD https://go.googlecode.com/files/go1.2.linux-amd64.tar.gz /tmp/
-RUN tar -C /usr/local -xzf go1.2.linux-amd64.tar.gz
+RUN tar -C /usr/local -xzf /tmp/go1.2.linux-amd64.tar.gz
+RUN rm /tmp/go1.2.linux-amd64.tar.gz
