Update elasticsearch to 0.90.10

--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Dan Sosedoff "dan.sosedoff@gmail.com"
 RUN echo "deb http://archive.ubuntu.com/ubuntu precise main universe" > /etc/apt/sources.list
 
 # Update system
-RUN apt-get update -y
+RUN apt-get update
 RUN apt-get upgrade -y
 
 # Fix upstart (https://github.com/dotcloud/docker/issues/1024)
@@ -21,9 +21,8 @@ RUN update-locale LANG=en_US.UTF-8
 RUN apt-get install -y sudo python-software-properties openjdk-7-jre-headless
 
 # Install elasticsearch
-ADD https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-0.90.7.deb /tmp/
-RUN dpkg -i /tmp/elasticsearch-0.90.7.deb
-RUN rm /tmp/elasticsearch-0.90.7.deb
+ADD https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-0.90.10.deb /tmp/
+RUN dpkg -i /tmp/elasticsearch-0.90.10.deb && rm /tmp/elasticsearch-0.90.10.deb
 
 # Setup elasticsearch
 EXPOSE 9200
