--- a/postgresql-9.3/pg_hba.conf
+++ b/postgresql-9.3/pg_hba.conf
@@ -1,5 +1,4 @@
-local   all             postgres                                peer
-local   all             all                                     peer
-host    all             all             127.0.0.1/32            md5
-host    all             all             0.0.0.0/0               md5
-host    all             all             ::1/128                 md5
+local   all         postgres                          trust
+local   all         all                               trust
+host    all         all         127.0.0.1/32          trust
+host    all         all         ::1/128               trust
