Configure root mysql user

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,6 +1,8 @@
 FROM ubuntu:12.04
 MAINTAINER Dan Sosedoff "dan.sosedoff@gmail.com"
 
+ENV DEBIAN_FRONTEND noninteractive
+
 # Update system
 RUN apt-get update
 RUN apt-get upgrade -y
@@ -15,10 +17,15 @@ RUN locale-gen en_US.UTF-8
 RUN update-locale LANG=en_US.UTF-8
 
 # Install mysql server
-RUN apt-get install -y mysql-server
+RUN apt-get install -y mysql-server mysql-client
 
 # Configure server
 ADD my.cnf /etc/mysql/my.cnf
+
+# Start server to setup mysql user
+RUN /usr/sbin/mysqld & sleep 10s
+RUN mysql -p --execute="CREATE USER 'root'@'%' IDENTIFIED BY 'root';"
+RUN mysql -p --execute="GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;"
 
 # Export daemon port
 EXPOSE 3306
